- [OK] Base de données MySQL - [OK] Fichier configuration - [OK] Event nouveau joueur - [OK] Commande /gloire - [DEV] Commande /gloire top (GUI) - [DEV] Event mobs

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,10 @@
 database:
-  host: localhost # host of your database
-  port: 3306 # default port for MariaDB and MySQL
-  database: db # name of your database. A database server can contain multiple databases
-  user: username
-  password: passy
+  host: localhost # Hôte de la base de données
+  port: 3306 # Port à utiliser
+  database: gloire # Nom de la base de données
+  username: minecraft
+  password: minecraft
+
+config:
+  gloire_base: 100 # Le nombre de Gloire qu'un nouveau joueur obtient
+  gloire_creeper: 3 # Le nombre de Gloire obtenus en tuant un Creeper
