--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -62,12 +62,13 @@ config:
   gloire_zombie_villager: 3
   # Messages
   gagner_gloires: '&dPour gagner des points de Gloire, tues des mobs ou combats d''autres joueurs. Le nombre de Gloire que tu gagneras dépend de la difficulté de tes combats.'
-  broadcast_reset: '&d[Gloire] Reset des points de Gloire&f'
-  timer: '&d[Gloire] Temps restant : '
+  broadcast_reset: '&d[Gloire] Reset des points de Gloire'
+  timer: '&d[Gloire] Temps restant : &f'
   gagner_points: '&d[Gloire] Vous avez gagné %s points de gloire'
   gloire: '&d[Gloire] Vous avez %s points de gloire'
   gloire_gagnant: '&d[Gloire] Vous avez gagné %s points de Gloire (%t% du gain total)'
   gloire_perdant: '&d[Gloire] Vous avez perdu %s points de Gloire'
+  gloire_24h: '&d[Gloire] Vous avez déjà tué ce joueur dans les dernières 24 heures'
 
 # Configuration des niveaux
 levels:
